Switched to I2Ps implementation of Base64. Added support for the RouterInfo API call. Added support for the RouterRunner API call.